2002-10-18  Adam Fedor  <fedor@gnu.org>

	* Documentation/announce.texi: Fix grammer.

	* Try to fix focus interaction with WindowMaker.
	* Source/NSApplication.m ([NSIconWindow -canBecomeKeyWindow]):
	Revert 2002-10-08 change.
	(-appIconInit): Don't set input focus to app icon.
	(-_windowWillClose:): Idem.
	* Source/NSMenu.m: New class NSMenuPanel
	(_createWindow): Use it.
	* Source/NSWindow.m (-_lossOfKeyOrMainWindow): Make sure menu
	window doesn't get key except as a last resort.
	(-sendEvent: (GSAppKitWindowFocusIn)): Don't become key if app 
	is hidden.

	* Source/NSPanel.m (-sendEvent:): Same as change to NSWindow on
	2002-10-03.

	* Source/NSDocument.m (-init): Set default file type.

Tue Oct 15 02:36:32 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSApplication.m (initialize_gnustep_backend): Get the
	GSBackend class using NSClassFromString() rather than NSBundle's
	-classNamed: to make it more robust on platforms - eg MS Windows -
	which have unclear problems with dynamic loading.

2002-10-14  Adam Fedor  <fedor@gnu.org>

	* Version: 0.8.2
	* Documentation/news.texi: Update.

Mon Oct 14 02:24:45 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSSavePanel.m (browser:createRowsForColumn:inMatrix:):
	Fixed last change which had broken the GSFileBrowserHideDotFiles
	option.

2002-10-13  Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/GSNibTemplates.h: Added parentClassName member to 
	templates so that the parent of the custom class could be stored.
	* Source/NSBundleAdditions.m: Made necessary modfications to the
	template implementations to use the parent class name

2002-10-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSavePanel.m: ([--browser:createRowsForColumn:inMatrix:])
	Don't try to read .hidden file for processing unless it exists.
	* Source/DocMakefile: New makefile for building documentation
	without having to build binaries. Also add flag for macros template.